SERVER-12717 Remove unnecessary dependency on db/commands.h from fail points